update utils